<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_txt_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="28dp"
        android:text="Mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:onClick="doButtonTextImage"/>

    <ImageButton
        android:id="@+id/ibtn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/btn_txt_image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:onClick="doImageButton"/>

    <CheckBox
        android:id="@+id/cbx_fruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:text="@string/cbx_fruit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="doCheckBox"/>

    <CheckBox
        android:id="@+id/cbx_meat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="96dp"
        android:text="@string/cbx_meat"
        app:layout_constraintStart_toEndOf="@+id/cbx_fruit"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="doCheckBox"/>

    <RadioGroup
        android:id="@+id/rgrp_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="188dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="doRadioButton">

        <RadioButton
            android:id="@+id/rbtn_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_one" />

        <RadioButton
            android:id="@+id/rbtn_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_two" />

        <RadioButton
            android:id="@+id/rbtn_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn_three" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/tbtn_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tbtn_power"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345"
        android:onClick="doToggleButton"/>

    <RatingBar
        android:id="@+id/rbar_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

    <EditText
        android:id="@+id/etxt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="216dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/etxt_msg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbar_star"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="216dp"
        android:onClick="doButton"
        android:text="@string/btn_toast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etxt_msg" />


</androidx.constraintlayout.widget.ConstraintLayout>